Changing package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pastebin-scrap",
+  "name": "pastebin-archive-scrape",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
